mod(category): store, relationship 기반 기본 CRUD 수정. - 사용하지 않는 예외 및 메서드 제거.